package com.bluecc.qltypes.message;

import com.bluecc.qltypes.pubs.*;
import lombok.Data;
import lombok.experimental.Accessors;
import java.util.List;

@Data
@Accessors(chain = true)
public class TypesEntity implements WithKey{
    String entityId;
    String entity;
    String partyContentTypeId;
    long sequenceNum;
    String enumCode;
    String mimeTypeId;
    String returnTypeId;
    String contactMechTypeId;
    String customerClassification;
    String planTypeId;
    String acctgTransEntryTypeId;
    String facilityGroupName;
    String finAccountTypeId;
    String shipmentGatewayConfigId;
    String defaultPackagingType;
    String productCategoryTypeId;
    String productMeterTypeId;
    String langCode3b;
    String glFiscalTypeId;
    String glJournalId;
    long termValue;
    String supplierPrefOrderId;
    String langCode3t;
    String perfReviewItemTypeId;
    String contentOperationId;
    String glAccountClassId;
    String fixedAssetProductTypeId;
    String orderItemAssocTypeId;
    String fixedAssetIdentTypeId;
    String agreementContentTypeId;
    String statusCode;
    String geoName;
    double employerPaidPercentage;
    String statusTypeId;
    String labelImageFormat;
    String contactListTypeId;
    String partyRelationshipName;
    String costCustomMethodId;
    String workEffortContentTypeId;
    String invoiceItemAssocTypeId;
    String langName;
    String visualThemeSetId;
    String inventoryItemTypeId;
    String surveyQuestionTypeId;
    String productFeatureTypeId;
    String postalCodeRegex;
    String roleTypeId;
    String requireStateProvinceId;
    String parentTypeId;
    String hasPostalCodeExt;
    String addressFormat;
    String periodTypeId;
    String glReconciliationName;
    TimestampValue reconciledDate;
    String abbreviation;
    String uomIdTo;
    String costComponentCalcId;
    String teleCode;
    String userLoginId;
    String invoiceItemMapKey;
    String roundingMode;
    String skillTypeId;
    String prodCatalogCategoryTypeId;
    String currencyUomId;
    TimestampValue createdDate;
    String isClosed;
    String returnItemTypeId;
    String organizationPartyId;
    String entityGroupId;
    String entityGroupName;
    String productPriceTypeId;
    String defaultReturnLabelMemo;
    FixedPointValue amountPercentage;
    String accessMeterNumber;
    String budgetTypeId;
    String accessUserKey;
    String sequenceId;
    String geoSecCode;
    String codSurchargeCurrencyUomId;
    long numericCode;
    String privilegeEnumId;
    String returnAdjustmentTypeId;
    String contentAssocPredicateId;
    String isPosted;
    String hasTable;
    String webSiteContentTypeId;
    String dataSourceTypeId;
    String userPrefValue;
    String defaultGlAccountId;
    String terminationTypeId;
    String userPrefDataType;
    String termName;
    String dataResourceTypeId;
    String parentGlXbrlClassId;
    String test;
    String fixedAssetTypeId;
    String workEffortPurposeTypeId;
    String billShipperAccountNumber;
    String glAccountCategoryTypeId;
    String orderAdjustmentTypeId;
    String settlementTermId;
    String goodIdentificationTypeId;
    String paymentMethodTypeId;
    TimestampValue thruDate;
    String returnItemMapKey;
    String requirePostalCode;
    String entityOrPackage;
    String finAccountTransTypeId;
    String contactMechPurposeTypeId;
    String glAccountGroupTypeId;
    long periodLength;
    String countryName;
    String glXbrlClassId;
    String segmentGroupTypeId;
    String trainingClassTypeId;
    String wellKnownText;
    String productStoreGroupTypeId;
    String replenishEnumId;
    String hitTypeId;
    String benefitTypeId;
    String description;
    String statusIdTo;
    String uomTypeId;
    String productStoreGroupId;
    String enumTypeId;
    String workEffortGoodStdTypeId;
    CurrencyValue reconciledBalance;
    String quoteTypeId;
    String paymentTypeId;
    String connectSoapUrl;
    String geoIdTo;
    String countryNumber;
    String requirePostalCodeExt;
    String glReconciliationId;
    String workEffortAssocTypeId;
    String isRefundable;
    String varianceReasonId;
    String rejectionId;
    String codFundsCode;
    String benefitName;
    String employmentAppSourceTypeId;
    String glAccountCategoryId;
    String invoiceTypeId;
    String metaDataPredicateId;
    String periodName;
    String agreementTypeId;
    String shipperNumber;
    String communicationEventTypeId;
    String transitionName;
    String requirementTypeId;
    String partyTypeId;
    String countryAbbr;
    String contentAssocTypeId;
    String orderDenylistTypeId;
    FixedPointValue minEstimateWeight;
    String productFeatureApplTypeId;
    String productPriceActionTypeId;
    String createdByUserLogin;
    String partyClassificationTypeId;
    String saveCertPath;
    String standardLanguageId;
    String telecomMethodTypeId;
    String labelImageType;
    String uomId;
    String applEnumId;
    String headVersion;
    long perMilliSecond;
    String customMethodTypeId;
    String prodCatContentTypeId;
    String shipperPickupType;
    String userPrefGroupTypeId;
    String glAccountTypeId;
    String customScreenTypeId;
    String templateLocation;
    String budgetItemTypeId;
    String rateTypeId;
    String roleTypeIdValidFrom;
    String extension;
    String communicationEventPrpTypId;
    long decimalScale;
    String rateEstimateTemplate;
    String contentTypeId;
    String glAccountId;
    String termTypeId;
    String webAnalyticsTypeId;
    String templateSubscription;
    String fileExtensionId;
    String dataSourceId;
    String langCode2;
    String parentClassId;
    String jobInterviewTypeId;
    String returnReasonId;
    String countryCode;
    String responsibilityTypeId;
    String quantityBreakTypeId;
    String accessAccountNbr;
    String productAssocTypeId;
    String offsettingGlAccountTypeId;
    String accessLicenseNumber;
    String roleTypeIdValidTo;
    String workReqFulfTypeId;
    String custRequestResolutionId;
    String enumId;
    String conditionExpression;
    String defaultUomId;
    String costComponentTypeId;
    String budgetReviewResultTypeId;
    String facilityGroupId;
    String templateShipment;
    String productContentTypeId;
    String invoiceContentTypeId;
    String accessUserPwd;
    String userPrefTypeId;
    String parentCategoryId;
    String custRequestTypeId;
    String shipmentTypeId;
    String accessUserId;
    String mrpEventTypeId;
    String facilityGroupTypeId;
    String workEffortTypeId;
    String productFeatureIactnTypeId;
    String partyQualTypeId;
    String glJournalName;
    String dataCategoryId;
    String agreementItemTypeId;
    String shipmentGatewayConfTypeId;
    String returnHeaderTypeId;
    String geoId;
    long connectTimeout;
    String deductionTypeId;
    CurrencyValue openingBalance;
    String glAccountGroupId;
    String headAction;
    String perfRatingTypeId;
    String fixedAssetStdCostTypeId;
    String acctgTransTypeId;
    String taxAuthorityAssocTypeId;
    String productMaintTypeId;
    String invoiceItemTypeId;
    String codSurchargeApplyToPackage;
    String saveCertInfo;
    String countryCapital;
    TimestampValue fromDate;
    String partyRelationshipTypeId;
    String accessShippingKey;
    String emplLeaveReasonTypeId;
    String langFamily;
    FixedPointValue codSurchargeAmount;
    String leaveTypeId;
    String taxAuthorityRateTypeId;
    String customTimePeriodId;
    long periodNum;
    String geoTypeId;
    double conversionFactor;
    String documentTypeId;
    String defaultDropoffType;
    String orderTypeId;
    String subscriptionTypeId;
    String parentPeriodId;
    String categoryName;
    String shipmentContactMechTypeId;
    String connectUrlLabels;
    String shoppingListTypeId;
    TimestampValue postedDate;
    String primaryParentGroupId;
    String contentPurposeTypeId;
    String lastModifiedByUserLogin;
    String trackingCodeTypeId;
    CurrencyValue variableCost;
    String costGlAccountTypeId;
    String facilityTypeId;
    String productPricePurposeId;
    String accessPassword;
    String orderItemTypeId;
    String confItemContentTypeId;
    String connectUrl;
    String isPhysical;
    String productStoreGroupName;
    String dataTemplateTypeId;
    String comments;
    String isDigital;
    String productAverageCostTypeId;
    TimestampValue lastModifiedDate;
    CurrencyValue fixedCost;
    String cardType;
    String geoCode;
    String paymentGatewayConfigTypeId;
    String defaultReturnLabelSubject;
    String langCharset;
    long maxEstimateWeight;
    String characterSetId;
    String customMethodId;
    String paymentGroupTypeId;
    String productTypeId;
    String glResourceTypeId;
    String codAllowCod;
    String geoAssocTypeId;
    String isAssetClass;
    String facilityAssocTypeId;
    String typesEntityTypeId;
    String statusId;
    String tenantId;
    TimestampValue lastUpdatedTxStamp;
    TimestampValue createdTxStamp;
    ListItemProtoValue subview;
    String format;
    String proto;
    TypesEntityStatusCollection typesEntityStatuses;
    ModelEntity model;
    FieldCatsValue cats;
    TypesEntity type;
    ProductType asProductType;
    @Override
    public String getKey() {
        return entityId;
    }
}



